--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,32 @@
-@import-normalize; /* bring in normalize.css styles */
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Inter';
+  src: url('./assets/Inter-Regular.woff2') format('woff2'),
+    url('./assets/Inter-Regular.ttf') format('ttf');
+  font-weight: normal;
+  font-display: swap;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'Inter';
+  src: url('./assets/Inter-Medium.woff2') format('woff2'),
+    url('./assets/Inter-Medium.ttf') format('ttf');
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./assets/Inter-SemiBold.woff2') format('woff2'),
+    url('./assets/Inter-SemiBold.ttf') format('ttf');
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+
+.custom-select__single-value {
+  font-size: 12px !important;
+  font-weight: 400 !important;
+  line-height: 1.5 !important;
 }
