--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,87 @@
   font-weight: 400 !important;
   line-height: 1.5 !important;
 }
+
+.custom-select__single-value {
+  font-size: 12px !important;
+  font-weight: 400 !important;
+  line-height: 1.5 !important;
+}
+
+.custom-select__control {
+  padding: 12px 14px !important;
+  inline-size: 295px !important;
+  gap: 0 !important;
+  background-color: transparent !important;
+  border-radius: 60px !important;
+  border: 1px solid #1d1e2119 !important;
+  box-shadow: none !important;
+  overflow: hidden !important;
+}
+
+.custom-select__value-container {
+  color: #1d1e2166 !important;
+  font-size: 12px !important;
+  font-weight: 400 !important;
+  line-height: 1.5 !important;
+  padding: 0 !important;
+  gap: 0 !important;
+}
+
+.custom-select__input-container {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.custom-select__placeholder {
+  color: #1d1e2166 !important;
+}
+
+.custom-select__indicator.custom-select__dropdown-indicator {
+  padding: 0 !important;
+}
+
+.custom-select__indicator {
+  cursor: pointer;
+  color: #1d1e21 !important;
+}
+
+.custom-select__indicator-separator {
+  display: none !important;
+}
+
+.custom-select__menu {
+  border-radius: 12px !important;
+  animation: scaleIn 0.35s ease-in-out;
+  background-color: #59b17a !important;
+}
+
+.custom-select__menu-list {
+  border-radius: 12px !important;
+  display: block !important;
+  max-block-size: 140px !important;
+  color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.custom-select__option {
+  inline-size: 294px !important;
+  cursor: pointer !important;
+  background-color: transparent !important;
+  font-size: 12px !important;
+  font-weight: 400 !important;
+  line-height: 1 !important;
+  transition: color 0.35s ease !important;
+}
+
+@media screen and (min-width: 768px) {
+  .custom-select__control {
+    inline-size: 224px !important;
+  }
+  .custom-select__option {
+    inline-size: 220px !important;
+  }
+}
+
+.custom-select__option:is(:hover, :focus) {
+  color: #ffffff !important;
+}
